--- a/complex_condition.yml
+++ b/complex_condition.yml
@@ -12,6 +12,8 @@
       name: "{{item}}"
       state: present
       loop: "{{my_packages}"
-    when: ansible_facts['distribution'] == "Microsoft Windows Server 2016 Core" and ansible_facts['architecture'] == "64-bit" and
-          ansible_facts['date_time']['date'] == "2017-11-21" or ansible_facts['date_time']['month'] == 11 or ansible_distribution_major_version == 10
+    when: 
+     - ansible_facts['distribution'] == "Microsoft Windows Server 2016 Core" 
+     - ansible_facts['architecture'] == "64-bit"
+     - ansible_facts['date_time']['date'] == "2017-11-21" or ansible_facts['date_time']['month'] == 11 or ansible_distribution_major_version == 10
      
