--- a/handlers.yml
+++ b/handlers.yml
@@ -6,11 +6,13 @@
     win_chocolatey:
       name: dotnet4.6.1
       state: present
+    ignore_errors: true
     notify:
     - reboot server
   - name: failing the tasks
     fail:
       msg: Failing the task as required
+    ignore_errors: true
   handlers:
   - name: reboot server
     win_reboot:
