--- a/handlers.yml
+++ b/handlers.yml
@@ -2,9 +2,9 @@
 - name: Testing Handlers
   hosts: all
   tasks:
-  - name: Install Dotnet4.6.1
+  - name: Install vlc
     win_chocolatey:
-      name: dotnet4.6.1
+      name: vlc
       state: present
     ignore_errors: true
     notify:
