--- a/handlers.yml
+++ b/handlers.yml
@@ -16,7 +16,7 @@
     ignore_errors: true
   - name: This is another task
     debug:
-      Final task
+      msg: Final task
   handlers:
   - name: reboot server
     win_reboot:
