--- a/handlers.yml
+++ b/handlers.yml
@@ -1,19 +1,20 @@
 ---
 - name: Testing Handlers
   hosts: all
+  force_handlers: true
   tasks:
   - name: Install 7zip
     win_chocolatey:
       name: 7zip
       state: present
-    ignore_errors: true
+    #ignore_errors: true
     notify:
     - reboot server
   - name: failing the tasks
     debug:
       msg: Failing the task as required
     failed_when: true
-    ignore_errors: true
+    #ignore_errors: true
   - name: This is another task
     debug:
       msg: Final task
